Fixed images on news🏁
1. Design, Implement and Link Home page.
2. 10
3. Added support for images on news

--- a/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
@@ -24,7 +24,7 @@
             <!-- for spacing -->
         </td>
         <td class="body_right_col">
-            <img height="300vw" [src]="image">
+            <img height="300vw" [src]="news.value.image" onerror="this.src='assets/placeholder.png'">
         </td>
     </tr>
 </table>
