Implemented Popup Functionality🍽️
1. Design, Implement and Link Restaurant Page
2. 8
3. Implemented a popup for the food items in the menu.

--- a/Client/Application/src/app/components/food/food-list-item/food-list-item.component.html
+++ b/Client/Application/src/app/components/food/food-list-item/food-list-item.component.html
@@ -11,7 +11,7 @@
                 
                 <!-- col for the add -->
                 <ion-col>
-                    <ion-button style="width: 95%; color:#930000; font-style: Asap;" expand="block" fill="outline" color="#930000">Add</ion-button>
+                    <ion-button (click)="openPopup()" style="width: 95%; color:#930000; font-style: Asap;" expand="block" fill="outline" color="#930000">Add</ion-button>
                 </ion-col>
             </ion-row>
           </ion-grid>
