--- a/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -18,3 +18,13 @@ ion-modal {
     text-transform: uppercase;
     border-bottom: #14274A 1px;
 }
+
+.header-2 {
+
+    font-family: 'Abhaya Libre';
+    font-size: 30px;
+    margin: 0px;
+    border-bottom: 1px solid #930000;
+    width: 80%;
+
+}
