--- a/Client/Application/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Application/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -1,3 +1,41 @@
-<p>
-  food-list-popup works!
-</p>
+<div style="vertical-align: middle;  margin: 0px; width: 30vw;">
+    <p class="title-1">Description</p>
+    <!-- <mat-divider style="border-top-color: #14274A"></mat-divider> -->
+    <br>
+    <p class="content-2">
+        {{description}}
+    </p><br>
+    <br>
+    <p class="content-1">
+        price
+    </p>
+    <p class="content-2">
+        USD {{formatPrice}}
+    </p><br>
+    <p class="content-1">
+        quantity
+    </p>
+    <button (click)="changeQuantity(-1)" class="quantity_btn">-</button>
+    <p style="display: inline;" class="content-2">
+        {{quantity}}
+    </p>
+    <button (click)="changeQuantity(1)" class="quantity_btn">+</button>
+    <br><br>
+    <p class="content-1">
+        total
+    </p>
+    <table style="padding: 0px; width: 100%;">
+        <tr>
+            <td style="width: 50%;">
+                <p class="title-2">
+                    USD {{formatTotalPrice}}
+                </p>
+            </td>
+            <td style="width: 50%;">
+                <button [disabled]="!quantity" (click)="addToCart()" class="add-btn">
+                    add_cart
+                </button>
+            </td>
+        </tr>
+    </table>
+</div>
