Finished announcement on the website🏁
1. N/A
2. 10
3. Finished all announcement related things on the website

--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
                     </select>
         
                 <!-- </mat-form-field> -->
-                <img style="padding-left: 40px;" src="../../../assets/phone-icon.png" width="20vw">
+                <img (click)="openNotifications()" style="padding-left: 40px;" src="../../../assets/phone-icon.png" width="20vw">
                 <img style="padding-left: 48px;" src="../../../assets/message-icon.png"
                     width="20vw">
             </td>
