--- a/Client/Application/src/app/pages/guest/home/home.component.scss
+++ b/Client/Application/src/app/pages/guest/home/home.component.scss
@@ -10,6 +10,16 @@ $primary-color: #14274A;
 
 }
 
+.modal {
+
+  width: 100%;
+  height: 100%;
+
+  --background: #d9d9d9d9;
+
+}
+
+
 .title-parent {
   
   display: block;
