--- a/Client/Application/src/app/components/facilities/facilities.component.scss
+++ b/Client/Application/src/app/components/facilities/facilities.component.scss
@@ -1,17 +1,39 @@
-.main-img{
+.main-img {
     width: 200%;
 }
 
-.img-title{
+.img-title {
     text-align: center;
     font-family: 'Roboto';
 }
 
-.sub-imgs{
+.sub-imgs {
     padding: 10px;
+    object-fit: cover;
+    width: 50vw;
+    height: 20vh;
 }
 
-.learn-more-button{
+.image {
+
+    box-sizing: border-box;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+    transform: translateY(-17%);
+
+
+}
+
+.image-bg {
+    // background-color: var(--ion-color-primary);
+    block-size: fit-content;
+    height: fit-content;
+    margin-top: 12%;
+}
+
+.learn-more-button {
     border-radius: 40px;
     padding: 10px;
     width: 175px;
@@ -20,6 +42,8 @@
 }
 
 .button-container {
+
+    margin-top: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,6 +57,3 @@
     --background: #d9d9d9d9;
 
 }
- 
- 
-
