--- a/Client/Application/src/theme/variables.scss
+++ b/Client/Application/src/theme/variables.scss
@@ -11,21 +11,19 @@
 	--ion-color-primary-shade: #122241;
 	--ion-color-primary-tint: #2c3d5c;
 
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+	--ion-color-secondary: #d6b389;
+	--ion-color-secondary-rgb: 214,179,137;
+	--ion-color-secondary-contrast: #000000;
+	--ion-color-secondary-contrast-rgb: 0,0,0;
+	--ion-color-secondary-shade: #bc9e79;
+	--ion-color-secondary-tint: #dabb95;
 
-  /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+	--ion-color-tertiary: #930000;
+	--ion-color-tertiary-rgb: 147,0,0;
+	--ion-color-tertiary-contrast: #ffffff;
+	--ion-color-tertiary-contrast-rgb: 255,255,255;
+	--ion-color-tertiary-shade: #810000;
+	--ion-color-tertiary-tint: #9e1a1a;
 
   /** success **/
   --ion-color-success: #2dd36f;
