--- a/Client/Application/src/app/components/activities/activities.component.scss
+++ b/Client/Application/src/app/components/activities/activities.component.scss
@@ -9,6 +9,7 @@
 
 .sub-imgs{
     padding: 10px;
+    object-fit: cover;
 }
 
 .learn-more-button{
@@ -19,7 +20,29 @@
     background-color: #D6B389;
 }
 
+.image {
+
+    box-sizing: border-box;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+    transform: translateY(-17%);
+
+
+}
+
+.image-bg {
+    // background-color: var(--ion-color-primary);
+    block-size: fit-content;
+    height: fit-content;
+    margin-top: 12%;
+}
+
+
 .button-container {
+
+    margin-top: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
