--- a/Client/Application/src/app/components/facilities/facilities.component.html
+++ b/Client/Application/src/app/components/facilities/facilities.component.html
@@ -1,22 +1,30 @@
-<table>
+<table style="table-layout: fixed;">
 
-  <tr>
-    <td colspan="2">
-      <h2 class="img-title">{{facility?.value?.title}}</h2>
-      <img class="main-img" src="../../../assets/services-pics/gym.png">
-    </td>
+  <div [style.background]="'var(' + getColor(facility?.key || '0') + ')'" class="image-bg" *ngIf="(facility?.value?.image?.length || 0) < 3">
+    <img class="image" [src]="facility?.value?.image?.at(0)" onerror="this.src='assets/placeholder.png'">
+  </div>
+  <ng-container *ngIf="(facility?.value?.image?.length || 0) >= 3">
 
-  </tr>
+    <tr>
+      <td colspan="2">
+        <h2 class="img-title">{{facility?.value?.title}}</h2>
 
-  <tr>
-    <td>
-      <img class="sub-imgs" src="../../../assets/services-pics/gym.png">
-    </td>
+        <img class="main-img"
+        [src]="facility?.value?.image?.at(0)" onerror="this.src='assets/placeholder.png'">
+      </td>
 
-    <td>
-      <img class="sub-imgs" src="../../../assets/services-pics/gym.png">
-    </td>
-  </tr>
+    </tr>
+
+    <tr>
+      <td>
+        <img class="sub-imgs" [src]="facility?.value?.image?.at(1)">
+      </td>
+
+      <td>
+        <img class="sub-imgs" [src]="facility?.value?.image?.at(2)">
+      </td>
+    </tr>
+  </ng-container>
 
   <ion-modal *ngIf="active_data" [enterAnimation]="enterAnimation" [leaveAnimation]="leaveAnimation"
     class="modal" [isOpen]="isModalOpen">
