--- a/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Application/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -34,7 +34,7 @@
                     promotion and permissions.
                 </ion-card-content>
                 <ion-button fill="clear"
-                    [routerLink]="['/admin/rooms-database']">Access</ion-button>
+                    [routerLink]="['/admin/room-database']">Access</ion-button>
             </ion-card>
         </ion-item>
         <ion-item>
