--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content style="margin-bottom: 100px;">
 
     <div class="main">
         <p class="title">
@@ -11,9 +11,11 @@
     <div class="container">
         <p class="content-2">
 
-            Indulge in a culinary adventure at our hotel's application restaurant, where each bite is a thrilling
+            Indulge in a culinary adventure at our hotel's application restaurant, where each bite
+            is a thrilling
             explosion
-            of flavors. Led by a team of skilled chefs, our dining destination will take you on a journey of taste, with
+            of flavors. Led by a team of skilled chefs, our dining destination will take you on a
+            journey of taste, with
             dishes crafted from the freshest ingredients and innovative techniques.
 
         </p>
@@ -24,7 +26,7 @@
     <p class="header-2">The Chefs</p>
     <div class="image-bg">
         <div class="image-container">
-            <img  src="../../../../../assets/rooms/chefs2.jpg">
+            <img src="../../../../../assets/rooms/chefs2.jpg">
             <div class="overlay-text">Click here to view</div>
         </div>
     </div>
@@ -33,7 +35,8 @@
     <hr>
     <div class="container">
         <p class="content-2">
-            The menu changes seasonally to ensure that the ingredients are at the peak of their flavor, and the chefs
+            The menu changes seasonally to ensure that the ingredients are at the peak of their
+            flavor, and the chefs
             are always experimenting with new techniques and recipes to keep things exciting.
         </p>
     </div>
@@ -41,8 +44,12 @@
     <div class="button-container">
 
         <button class="view-menu-button">View Menu</button>
-      </div>
-      <div class="button-container">
+    </div>
+    <div class="button-container">
 
-        <button class="feedback-button">Feedback</button>
-      </div>
+        <!-- <button class="feedback-button">Feedback</button> -->
+    </div>
+
+    <br><br><br><br><br><br>
+
+</ion-content>
