--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -4,7 +4,10 @@
   <ion-menu style="vertical-align: top;" contentId="main-content">
     <ion-menu-toggle>
       <ion-fab-button translucent="false" class="burger-btn">
+
+
         <img width="80%" src="../../assets/tabs/menu-btn.png">
+
       </ion-fab-button>
     </ion-menu-toggle>
     <ion-content>
@@ -67,23 +70,32 @@
       </ion-text>
       <br>
       <ion-menu-toggle>
-      <ion-text class="bottom" (click)="logout()">
-        {{'logout' | translate}}
-      </ion-text>
-    </ion-menu-toggle>
+        <ion-text class="bottom" (click)="logout()">
+          {{'logout' | translate}}
+        </ion-text>
+      </ion-menu-toggle>
     </div>
   </ion-menu>
 
-  <div *ngIf="!isActive('/chat/admin/')"  style="position: fixed;height: 10% !important;" id="main-content">
+  <div *ngIf="!isActive('/chat/admin/')" style="position: fixed;height: 10% !important;"
+    id="main-content">
 
     <ion-menu-toggle>
       <ion-fab-button translucent="false" class="burger-btn">
-        <img width="80%" src="../../assets/tabs/menu-btn-inactive.png">
+
+        <!-- <div style="position: relative;"> -->
+
+          <img style="position: fixed; top: 15x; left: 16px;" width="80%" src="../../assets/tabs/menu-btn-inactive.png">
+          <img style="position: fixed; top: 16px; left: 16px" width="80%" src="../../assets/tabs/menu-btn.png">
+
+        <!-- </div> -->
+
       </ion-fab-button>
     </ion-menu-toggle>
   </div>
 
-  <div *ngIf="isActive('/chat/guest') || !isActive('/chat/admin/')" style="bottom: 0px; position: fixed; width: 100%;">
+  <div *ngIf="isActive('/chat/guest') || !isActive('/chat/admin/')"
+    style="bottom: 0px; position: fixed; width: 100%;">
 
 
     <!-- <ion-toolbar> -->
@@ -113,7 +125,8 @@
               class="block-container">
               <ion-img class="image"
                 [src]="isActive('/rooms') ? '../../assets/tabs/rooms-active.png' : '../../assets/tabs/rooms.png'"></ion-img>
-              <ion-text class="text-active" *ngIf="isActive('/rooms')">Rooms</ion-text>
+              <ion-text style="color: var(--ion-color-tertiary)" class="text-active"
+                *ngIf="isActive('/rooms')">Rooms</ion-text>
             </div>
           </ion-button>
         </td>
@@ -125,7 +138,7 @@
               class="block-container">
               <ion-img class="image"
                 [src]="isActive('/services') ? '../../assets/tabs/services-active.png' : '../../assets/tabs/services.png'"></ion-img>
-              <ion-text style="color: #D6B389" class="text-active"
+              <ion-text style="color: var(--ion-color-secondary)" class="text-active"
                 *ngIf="isActive('/services')">Services</ion-text>
             </div>
           </ion-button>
@@ -138,8 +151,7 @@
               class="block-container">
               <ion-img class="image"
                 [src]="isActive('/restaurant') ? '../../assets/tabs/restaurant-active.png' : '../../assets/tabs/restaurant.png'"></ion-img>
-              <ion-text style="color: #930000" class="text-active"
-                *ngIf="isActive('/restaurant')">Restaurant</ion-text>
+              <ion-text class="text-active" *ngIf="isActive('/restaurant')">Restaurant</ion-text>
             </div>
           </ion-button>
         </td>
