--- a/Client/Application/src/app/components/food/food-list-item/food-list-item.component.scss
+++ b/Client/Application/src/app/components/food/food-list-item/food-list-item.component.scss
@@ -4,6 +4,45 @@
     align-items: center;
 }
 
-// ion-col{
-//     border: 1px solid black;
-// }
+.price {
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+
+    color: var(--ion-color-tertiary);
+
+}
+
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
+
+.label {
+
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+
+}
+
+.description {
+
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+
+}
