--- a/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -1,4 +1,4 @@
-$primary-color: #14274A;
+$primary-color: var(--ion-color-primary);
 
 .block {
     width: 100%;
@@ -8,15 +8,86 @@ $primary-color: #14274A;
     justify-content: center;
 }
 
-ion-modal {
-    --height: auto;
+.container {
+
+
+
+    width: 90%;
+    height: 70%;
+    padding: 24px;
+    border-radius: 40px;
+    background-color: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    // text-align: center;
+
+
+}
+
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
+
+.back-btn {
+
+    margin: 16px;
+    --background: transparent;
+    --color: black;
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+
 }
 
 .header {
+
     font-family: 'Asap';
-    font-size: 200%;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    width: 50%;
     text-transform: uppercase;
-    border-bottom: #14274A 1px;
+    line-height: 28px;
+
+    transform: translateX(-50%);
+    position: relative;
+    left: 50%;
+
+    color: var(--ion-color-dark);
+}
+
+.cancel-btn {
+
+    --background: var(--ion-color-secondary);
+    width: 150px;
+    position: fixed;
+    top: 12px;
+    text-align: center;
+    // bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    // position: absolute;
+
+}
+.header-3 {
+
+    font-family: 'Asap';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    
+    text-transform: uppercase;
+    line-height: 28px;
+
+    color: var(--ion-color-dark);
 }
 
 .header-2 {
@@ -27,4 +98,99 @@ ion-modal {
     border-bottom: 1px solid #930000;
     width: 80%;
 
+}
+
+.title {
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+
+    text-align: center;
+    letter-spacing: 0.05em;
+
+    padding-top: 32px;
+
+    color: #14274A;
+
+}
+
+
+.quantity_btn {
+
+    display: inline-block;
+    width: 10px;
+    background-color: white;
+    border: 0px;
+    padding: 8px;
+
+}
+
+.label {
+
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Roboto';
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    text-align: start;
+    display: inline;
+
+}
+
+.mark {
+
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Roboto';
+    padding-bottom: 0px;
+    margin-top: 0px;
+    text-align: start;
+    display: inline;
+
+}
+
+.content {
+
+    padding-bottom: 32px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+
+
+
+    color: #14274A;
+}
+
+.padded {
+
+    padding-left: 48px;
+    padding-right: 48px;
+
+}
+
+
+.add-btn {
+
+    font-family: 'Roboto';
+    font-style: normal;
+    --background: var(--ion-color-secondary);
+
+    border-radius: 30px;
+
+    font-weight: 400;
+    font-size: 20px;
+    --padding: 16px;
+    line-height: 25px;
+
+    left: 50%;
+    bottom: 16px;
+    transform: translateX(-50%);
+    position: relative;
+    text-align: center;
+
+    color: white;
 }
