Prepared the verification logic🏁
1. N/A
2. 10
3. Prepared the verification logic for new users.

--- a/Client/Application/src/app/pages/authentication/login/login.component.html
+++ b/Client/Application/src/app/pages/authentication/login/login.component.html
@@ -4,7 +4,7 @@
     <ion-text class="title">Login Now</ion-text>
     <ion-input [(ngModel)]="email" placeholder="Email"
         class="input"></ion-input>
-    <ion-input [(ngModel)]="password" placeholder="Password"
+    <ion-input type="password" [(ngModel)]="password" placeholder="Password"
         class="input"></ion-input>
     <ion-text class="password">Forgot Password?</ion-text>
     <ion-button (click)="login()" class="login">Login</ion-button>
