--- a/Client/Application/src/app/pages/authentication/verify/verify.component.scss
+++ b/Client/Application/src/app/pages/authentication/verify/verify.component.scss
@@ -4,15 +4,15 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    size: 14px;
-    --padding-top: 12px;
-    --padding-bottom: 12px;
-    line-height: 14px;
+    font-size: 16px;
+    // size: 14px;
+    // --padding-top: 12px;
+    // --padding-bottom: 12px;
+    line-height: 20px;
     --padding-start: 16px;
     border-radius: 8px;
     
-    width: 80%;
+    width: 100%;
     background-color: rgba(217, 217, 217, 0.4);
     margin-bottom: 16px;
 
@@ -79,9 +79,9 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 32px;
     line-height: 48px;
-    width: 45%;
+    width: 50%;
     margin-bottom: 16px;
 
     color: #000000;
