--- a/Client/Application/src/app/pages/authentication/verify/verify.component.html
+++ b/Client/Application/src/app/pages/authentication/verify/verify.component.html
@@ -3,12 +3,22 @@
 
 
     <ion-text class="title">Verify Email</ion-text>
-    <ion-input [(ngModel)]="email" placeholder="Email" class="input"></ion-input>
-    <ion-button (click)="send()" class="register">Next</ion-button>
-    <ion-text class="login" (click)="logout()">Logout</ion-text>
-    <ion-input [(ngModel)]="verification" class="input">
-        <ion-label position="hover">{{'Verification' | translate}}</ion-label>
-    </ion-input>
+    <ion-list>
+
+        <ion-item>
+
+            <ion-input label="Email" labelPlacement="floating" [(ngModel)]="email"
+                placeholder="Email" class="input"></ion-input>
+        </ion-item>
+        <ion-item>
+
+            <ion-input label="Verification" labelPlacement="floating" [(ngModel)]="verification"
+                class="input">
+            </ion-input>
+        </ion-item>
+    </ion-list>
     <ion-button class="register" (click)="verify()">Sign
         up</ion-button>
+    <ion-button (click)="send()" class="register">Send</ion-button>
+    <ion-text class="login" (click)="logout()">Logout</ion-text>
 </div>
